# fastapi2025

./: README.md  app.py  pyproject.toml
