[tool.poetry]
name = "fastapi2025"
version = "0.1.0"
description = "Project fastapi2025 oriented by Dunossauro"
authors = ["Jorge Luis Plautz <jorge.plautz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
